style: 优化pom